Avoid usage of deprecated newInstance() method
As per the documentation, one can replace the call to
clazz.newInstance() with clazz.getDeclaredConstructor().newInstance().