@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011, 2024 Google, Inc.
+ * Copyright (c) 2011, 2025 Google, Inc. and others.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License 2.0 which is available at
@@ -197,7 +197,7 @@ public final class PropertyEditorWrapper {
 		//
 		////////////////////////////////////////////////////////////////////////////
 		public DialogPresentation(java.beans.PropertyEditor propertyEditor) throws Exception {
-			m_dialogPropertyEditor = propertyEditor.getClass().newInstance();
+			m_dialogPropertyEditor = propertyEditor.getClass().getDeclaredConstructor().newInstance();
 		}
 
 		////////////////////////////////////////////////////////////////////////////
